# Code-Morph-Autonomous-Multi-Agent-Repository-Migration-Engine

./: .gitignore  README.md  WALKTHROUGH.md  pyproject.toml  requirements.txt
config/migration_rules/: python.yaml
docs/: PHASE3_VERIFICATION.md
examples/tensorflow_to_pytorch/: README.md  migration_report.json
examples/tensorflow_to_pytorch/output/: pytorch_mnist_classifier.py
examples/tensorflow_to_pytorch/repo_verified/: legacy_mnist_classifier.py
src/: __init__.py  main.py
src/agent_orchestration/: __init__.py  orchestrator.py
src/agent_orchestration/agents/: __init__.py  dependency_resolver.py  migration_coordinator.py  report_generator.py  repository_scanner.py  verification_agent.py
src/agent_orchestration/schemas/: __init__.py  orchestration_models.py
src/ast_engine/: __init__.py
src/ast_engine/analyzers/: __init__.py  api_detector.py  dependency_analyzer.py  migration_plan_generator.py
src/ast_engine/parsers/: __init__.py  base_parser.py  python_parser.py
src/ast_engine/schemas/: __init__.py  ast_models.py  migration_models.py
src/migration_engine/: __init__.py
src/migration_engine/llm_integration/: __init__.py  groq_client.py
src/migration_engine/transformers/: __init__.py  base_transformer.py  python_transformer.py
src/test_sandbox/: __init__.py  comparator.py  docker_manager.py  test_executor.py  test_generator.py
src/test_sandbox/schemas/: __init__.py  test_models.py
src/utils/: config.py  file_handler.py  logger.py
tests/: __init__.py
tests/unit/test_ast_engine/: __init__.py  test_api_detector.py  test_dependency_analyzer.py  test_python_parser.py
