[tool.poetry]
name = "code-morph"
version = "0.1.0"
description = "Autonomous Multi-Agent Repository Migration Engine with AST-driven semantic understanding"
authors = ["Huzaifa Nasir<nasirhuzaifa95@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
# AST Parsing
libcst = "^1.1.0"
# Type Safety
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
# Dependency Analysis
networkx = "^3.2.0"
# CLI
typer = {extras = ["all"], version = "^0.9.0"}
rich = "^13.7.0"
# LLM Integration (Phase 2)
groq = "^0.4.0"
# Utilities
python-dotenv = "^1.0.0"
tenacity = "^8.2.0"
tiktoken = "^0.5.0"
jinja2 = "^3.1.0"
# Logging
loguru = "^0.7.0"
# Docker (Phase 3)
docker = "^7.0.0"
# Testing (Phase 3)
pytest-docker = "^2.0.0"
deepdiff = "^6.7.0"
# Agent Orchestration (Phase 4)
langgraph = "^0.0.20"
langchain = "^0.1.0"
langchain-openai = "^0.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"
mypy = "^1.8.0"
ruff = "^0.1.0"
black = "^23.12.0"
isort = "^5.13.0"
pre-commit = "^3.6.0"

[tool.poetry.scripts]
code-morph = "src.main:app"

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = false
exclude = ["tests", "examples"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html --cov-report=term-missing"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
